<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_charts" />
        <item
            android:id="@+id/nav_series"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_series" />
        <item
            android:id="@+id/nav_groups"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/menu_groups" />

        <item
            android:id="@+id/nav_chatroom"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chatroom" />

        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/menu_activity" />
    </group>

    <item android:title="More">
        <menu>
            <item
                android:id="@+id/nav_instructors"
                android:icon="@drawable/ic_border_color_black_24dp"
                android:title="@string/menu_instructors" />
            <item
                android:id="@+id/nav_courses"
                android:icon="@drawable/ic_event_note_black_24dp"
                android:title="@string/menu_courses" />

            <item
                android:id="@+id/nav_open_demat_account"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/menu_open_demat_account" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about_us" />

            <item
                android:id="@+id/nav_contact_us"
                android:icon="@drawable/ic_contact_phone_black_24dp"
                android:title="@string/menu_contact_us" />
        </menu>
    </item>

</menu>
